# talta

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  azure-pipelines.yml
include/: talta.hpp
include/talta/: util.hpp
src/: talta.cpp  util.cpp
